# lib/api-spec/openapi.yaml
@@ -554,6 +554,12 @@ components:
         bathrooms:
           type: integer
           nullable: true
+        jacuzzis:
+          type: integer
+          nullable: true
+        saunas:
+          type: integer
+          nullable: true
         entryCode:
           type: string
           nullable: true
@@ -601,6 +607,12 @@ components:
         bathrooms:
           type: integer
           nullable: true
+        jacuzzis:
+          type: integer
+          nullable: true
+        saunas:
+          type: integer
+          nullable: true
         entryCode:
           type: string
           nullable: true
@@ -640,6 +652,12 @@ components:
           type: integer
           nullable: true
         bathrooms:
+          type: integer
+          nullable: true
+        jacuzzis:
+          type: integer
+          nullable: true
+        saunas:
           type: integer
           nullable: true
         entryCode:
